# Twitter-Clone

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  prometheus.config.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-10-05_1100-8ce111dac799_database_initialization.py  2023-10-05_1400-c3a8b99e3a0a_add_users_table.py  2023_10_05_1802-3861bae38e3a_add_user_followers_table.py  2023_10_05_2016-669bc4bd7d56_fix_relationships_primaryhoin_in_users_.py  2023_10_10_1746-90fa05359b83_add_media_table.py  2023_10_11_2009-1f5ebc96dab9_add_tweets_table_and_update_media_table.py  2023_10_12_1126-b57a0a2230ee_add_tweet_likes_table.py
configs/: nginx.config.conf
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
environments/: .env.example  .env.flower.example
grafana/: FastAPI dashboard-1698334141966_rev1.json  FastAPI dashboard-1698388342999_rev2.json  FastAPI dashboard-1698751093565_rev3.json
src/: celery.py  celery_init.py  config.py  exceptions.py  main.py  schemas.py  test_data.py  utils.py  yandex_s3.py
src/database/: core.py  models.py
src/media/: config.py  models.py  router.py  schemas.py  service.py  tasks.py
src/tweets/: models.py  router.py  schemas.py  service.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  shared.py
tests/media/: conftest.py  test_adding_media.py
tests/tweets/: conftest.py  test_add_tweet.py  test_deleting_tweet.py  test_get_tweets.py  test_like_and_unlike_tweet.py  test_like_tweet.py  test_unlike_tweet.py
(+6 files in other folders)
