[tool.poetry]
name = "python-advanced-diploma"
version = "0.1.0"
description = ""
authors = ["AndrewRayst <mr.darmelow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
loguru = "^0.7.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
asyncpg = "^0.28.0"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
mypy = "^1.5.1"
isort = "^5.12.0"
black = "^23.9.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"